--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ ecdsa==0.19.0
 email_validator==2.1.1
 fastapi==0.110.3
 greenlet==3.0.3
+gunicorn==22.0.0
 h11==0.14.0
 httpcore==1.0.5
 httptools==0.6.1
@@ -22,6 +23,7 @@ Jinja2==3.1.3
 Mako==1.3.3
 MarkupSafe==2.1.5
 orjson==3.10.2
+packaging==24.0
 passlib==1.7.4
 psycopg==3.1.18
 psycopg-binary==3.1.18
