--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Pull git repo
         uses: actions/checkout@v4
       - name: Install Python version 3.12
-        uses: actions/setup-python@5
+        uses: actions/setup-python@v5
         with:
           python-version: "3.12"
       - name: Update pip
