--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -32,17 +32,39 @@ jobs:
 
     runs-on: ubuntu-latest
     steps:
-      - name: Pull git repo
+      - name: Pull GitHub repo
         uses: actions/checkout@v4
+
       - name: Install Python version 3.12
         uses: actions/setup-python@v5
         with:
           python-version: "3.12"
+
       - name: Update pip
         run: python -m pip install --upgrade pip
+
       - name: Install dependencies
         run: pip install -r requirements.txt
-      - name: Test with pytest
+
+      - name: Test with Pytest
         run: |
           pip install pytest
           pytest
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/fastapi:latest
+          cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/fastapi:buildcache
+          cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/fastapi:buildcache,mode=max
