--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -3,7 +3,7 @@ name: Build and Deploy Code
 on: [push, pull_request]
 
 jobs:
-  job1:
+  build:
     environment:
       name: Testing
     env:
@@ -68,3 +68,9 @@ jobs:
       #     tags: ${{ secrets.DOCKERHUB_USERNAME }}/fastapi:latest
       #     cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/fastapi:buildcache
       #     cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/fastapi:buildcache,mode=max
+
+  # deploy:
+  #   runs-on: ubuntu-latest
+  #   needs: [build]
+
+  #   steps:
