--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -76,10 +76,6 @@ jobs:
       name: Production
 
     steps:
-      # login to ubuntu server
-      # cd /app/src
-      # git pull
-      # systemctl restart api
       - name: Deploy to Ubuntu server
         uses: appleboy/ssh-action@v1.0.3
         with:
@@ -89,4 +85,4 @@ jobs:
           script: |
             cd app/src
             git pull
-            sudo systemctl restart api
+            echo ${{ secrets.PROD_PASSWORD }} | sudo -S systemctl restart api
